run-dacapo: match what run-renaissance is doing