@@ -27,8 +27,7 @@ if [ ! -d $DACAPO ]; then
 fi
 W="-jar $DACAPO/dacapo-23.11-MR2-chopin.jar $*"
 
-
-OPTS="-XX:+UseShenandoahGC -Xmx8g -Xms8g -XX:+AlwaysPreTouch -XX:+UseTransparentHugePages -XX:+UnlockDiagnosticVMOptions -XX:ShenandoahGCMode=passive -XX:+UnlockExperimentalVMOptions"
+OPTS="-XX:+UseShenandoahGC -Xmx10g -Xms10g -XX:+AlwaysPreTouch -XX:-TieredCompilation -XX:+UseTransparentHugePages -XX:+UseCompactObjectHeaders -XX:+UnlockDiagnosticVMOptions -XX:ShenandoahGCMode=passive -XX:+UnlockExperimentalVMOptions"
 
 OPTS_ALL="$OPTS -XX:+ShenandoahLoadRefBarrier -XX:+ShenandoahSATBBarrier -XX:+ShenandoahCASBarrier -XX:+ShenandoahCloneBarrier"
 
